--- a/IP2AS_Analysis-3.ipynb
+++ b/IP2AS_Analysis-3.ipynb
@@ -4120,12 +4120,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
+   "id": "35b8fa3f-1621-4eac-beba-871d8fd1c305",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Status                                                            matched\n",
+       "Reference Orgs          [{'source': 'CA2O', 'url': 'http://api.asrank....\n",
+       "Sibling ASNs                                                 [7738, 8167]\n",
+       "Name                                                                     \n",
+       "Descr                                                                    \n",
+       "Website                                               http://www.vtal.com\n",
+       "Comparison with CA2O                                             Disagree\n",
+       "Comparison with PDB                                                 Agree\n",
+       "PDB.org_id                                                           3168\n",
+       "PDB.org                                                              Vtal\n",
+       "score                                                                  17\n",
+       "Name: 52320, dtype: object"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ASORG_DF.loc[52320]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "id": "e676af0b-5d67-4fbf-99e0-3ffb4468a417",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>insertion</th>\n",
+       "      <th>deletion</th>\n",
+       "      <th>sub_err</th>\n",
+       "      <th>sub_corr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>INTERNET2-RESEARCH-EDU</td>\n",
+       "      <td>BBIL-AP</td>\n",
+       "      <td>INTERNET2-RESEARCH-EDU</td>\n",
+       "      <td>ZAYO-6461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LVLT-3549</td>\n",
+       "      <td>TATACOMM-AS</td>\n",
+       "      <td>LVLT-3549</td>\n",
+       "      <td>GSLNETWORKS-AS-AP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LEVEL3</td>\n",
+       "      <td></td>\n",
+       "      <td>GSL</td>\n",
+       "      <td>SKB-AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SINGTEL-TW</td>\n",
+       "      <td>AKAMAI-ASN1</td>\n",
+       "      <td>COGENT-174</td>\n",
+       "      <td>TIC-GW-AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SINGTEL-AS-AP</td>\n",
+       "      <td></td>\n",
+       "      <td>HURRICANE</td>\n",
+       "      <td>INCAPSULA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>COGENT-4991-4994</td>\n",
+       "      <td>TIC-GW-AS</td>\n",
+       "      <td>Delta-Telecom-AS</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SPRINTLINK</td>\n",
+       "      <td>COMCAST-33491</td>\n",
+       "      <td>LEVEL3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>TWELVE99</td>\n",
+       "      <td>BHARTITELESONIC-AS-IN-AP</td>\n",
+       "      <td></td>\n",
+       "      <td>Equinix</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>IELO-CH</td>\n",
+       "      <td>SERVIHOSTING-AS</td>\n",
+       "      <td>CORE-BACKBONE</td>\n",
+       "      <td>SOUTHERN-CROSSROADS-SOX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GSL</td>\n",
+       "      <td>ERTH-TRANSIT-AS</td>\n",
+       "      <td>INTERNET2-I2PX</td>\n",
+       "      <td>NKN-INTERNET-GW</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                insertion                  deletion                 sub_err  \\\n",
+       "0  INTERNET2-RESEARCH-EDU                   BBIL-AP  INTERNET2-RESEARCH-EDU   \n",
+       "1               LVLT-3549               TATACOMM-AS               LVLT-3549   \n",
+       "2                  LEVEL3                                               GSL   \n",
+       "3              SINGTEL-TW               AKAMAI-ASN1              COGENT-174   \n",
+       "4           SINGTEL-AS-AP                                         HURRICANE   \n",
+       "5        COGENT-4991-4994                 TIC-GW-AS        Delta-Telecom-AS   \n",
+       "6              SPRINTLINK             COMCAST-33491                  LEVEL3   \n",
+       "7                TWELVE99  BHARTITELESONIC-AS-IN-AP                           \n",
+       "8                 IELO-CH           SERVIHOSTING-AS           CORE-BACKBONE   \n",
+       "9                     GSL           ERTH-TRANSIT-AS          INTERNET2-I2PX   \n",
+       "\n",
+       "                  sub_corr  \n",
+       "0                ZAYO-6461  \n",
+       "1        GSLNETWORKS-AS-AP  \n",
+       "2                   SKB-AS  \n",
+       "3                TIC-GW-AS  \n",
+       "4                INCAPSULA  \n",
+       "5                           \n",
+       "6                           \n",
+       "7                  Equinix  \n",
+       "8  SOUTHERN-CROSSROADS-SOX  \n",
+       "9          NKN-INTERNET-GW  "
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "AS_eval_name = AS_eval_df.copy()\n",
+    "AS_eval_name = AS_eval_df.copy().astype(str)\n",
     "for col in AS_eval_df.columns.values.tolist():\n",
     "    for row in range(len(AS_eval_df)):\n",
     "        this_as = AS_eval_df.loc[row,col]\n",
@@ -4135,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 217,
    "id": "b17d15b7-28d4-41cd-a8de-03fdfde7c4fd",
    "metadata": {},
    "outputs": [],
@@ -4171,7 +4336,7 @@
     "\n",
     "    htype_slice = PIPELINE_DF.loc[PIPELINE_DF.htype == eval_htype]\n",
     "    eval_df = htype_slice.loc[htype_slice.errors.apply(lambda x: error_match(x,eval_error, eval_as))]\n",
-    "    print(len(eval_df))\n",
+    "    print(\"Errors to parse: %d\" % len(eval_df))\n",
     "    \n",
     "    seq_counter = Counter()\n",
     "    pre_AS_counter = Counter()\n",
@@ -4252,7 +4417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 218,
    "id": "9188f04a-ae84-4f30-99bb-3c0ab1d697c5",
    "metadata": {},
    "outputs": [
@@ -4260,7 +4425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "194\n"
+      "Errors to parse: 194\n"
      ]
     }
    ],
@@ -4274,7 +4439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 219,
    "id": "24d432da-4e7e-4b32-be53-577c94599446",
    "metadata": {},
    "outputs": [
@@ -4349,7 +4514,7 @@
        "0  {('210', '210', '11164', '11537', '11537', '11...  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4368,7 +4533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78961\n"
+      "Errors to parse: 78961\n"
      ]
     }
    ],
@@ -4383,7 +4548,7 @@
     "        for etype in etype_list:\n",
     "            eval_AS = AS_eval_df[etype][k]\n",
     "            result = evaluate_AS_errors(eval_AS, htype, etype)\n",
-    "            result_df_list.append(result)\n",
+    "            result_df_list.append(pd.DataFrame({k: [v] for k, v in result.items()}))\n",
     "        print(f\"{htype} #{k} Complete.\")\n",
     "\n",
     "topk_AS_eval_df = pd.concat(result_df_list)"
